update: format service account